--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
 
           <div class="header-left">
-            <img class="logo" src="assets/image/bb-white.png">
+            <img class="logo" src="bb-white.png">
             <p>Best Buddy Tours and Travel</p>
           </div>
 
@@ -56,84 +56,84 @@
       
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-2.jpg">
+              <img src="japan-2.jpg">
               <p class="text-contents"><strong>Fushimi Inari Taisha</strong> is the main temple of Inari, the god of rice, sake, prosperity, protector of business, traders and factories. It is located under Mount Inari.</p>
             </div>
           </div>
 
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-1.jpg">
+              <img src="japan-1.jpg">
               <p class="text-contents"><strong>Mount Fuji</strong> is 3,776 meters high above the sea surface and visited by 200 to 300 thousand climbers every year.</p>
             </div>
           </div>
 
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-3.jpg">
+              <img src="japan-3.jpg">
               <p class="text-contents"><strong>Sannomachi Street</strong>, there are charming dark brown houses from the Edo era. Most of them still function as places to live, and some others have turned into restaurants, cafes, or gift shops.</p>
             </div>
           </div>
 
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-4.jpg">
+              <img src="japan-4.jpg">
               <p class="text-contents"><strong>Kyoto</strong> is home to several Japanese cultural rulers including some of the best kimono makers, also famous for food, music, and crafts.</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-6.jpg">
+              <img src="japan-6.jpg">
               <p class="text-contents"><strong>Hachiko Statue</strong> is the Shibuya mascot located in front of Shibuya station. This statue depicts Japanese culture, which is on time, never give up patience and loyalty.</p>
             </div>
           </div>
 
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-5.jpg">
+              <img src="japan-5.jpg">
               <p class="text-contents"><strong>Shirakawa-go</strong> is located in the Sho-gawa River Valley, in the Ryohaku mountain valley, bordering Ishikawa prefecture.</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-7.jpg">
+              <img src="japan-7.jpg">
               <p class="text-contents"><strong>Murodo</strong> is located 2450 meters above sea level, Murodo is the highest point along the Tateyama Kurobe Mountain route, which offers fantastic views of the Tateyama Mountain.</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-8.jpg">
+              <img src="japan-8.jpg">
               <p class="text-contents"><strong>Nakamise Shopping Street</strong> is located along the road in Asakusa, this Japanese-style shopping street is shopping paradise for traditional snacks and souvenirs.</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-9.jpg">
+              <img src="japan-9.jpg">
               <p class="text-contents"><strong>Mishima Skywalk</strong> is located in the city of mishima, lies along 400 meters with beautiful scenery around it including being able to see Mount Fuji from afar.</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-10.jpg">
+              <img src="japan-10.jpg">
               <p class="text-contents"><strong>Yukata</strong> is a traditional Japanese dress which is a casual outfit from Kimono for the summer and is made of cotton.</p> 
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-11.jpg">
+              <img src="japan-11.jpg">
               <p class="text-contents"><strong>Kurobe Dam</strong> is located at an altitude of about 2,000 meters, and the deepest dam in Japan, with the beauty of the Tateyama Kurobe Alpine</p>
             </div>
           </div>
   
           <div class="japan-list">
             <div class="japan-icon">
-              <img src="assets/image/japan-12.jpg">
+              <img src="japan-12.jpg">
               <p class="text-contents"><strong>Kiyomizu Dera Temple</strong>, which means the temple of clean water, is a magnificent temple located in the mountains of Ottawa</p>
             </div>
           </div>
@@ -188,7 +188,7 @@
     </div>
 
             <div>
-              <img src="assets/image/koper.png" class="featured-image">
+              <img src="koper.png" class="featured-image">
             </div>
         
   </div>
